--- a/src/app/manager/manager2/manager2.component.html
+++ b/src/app/manager/manager2/manager2.component.html
@@ -173,7 +173,8 @@
 
       <div class="curveWrap">
         <div class="title">График</div>
-        <img src="assets/images/bigCurve.png" alt="alt">
+        <p-chart type="line" [data]="data"></p-chart>
+        <!--<img src="assets/images/bigCurve.png" alt="alt">-->
         <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed metus lacinia, molestie felis sit amet, tristique nisl. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tellus gravida massa condimentum, sit amet elementum orci dapibus.</div>
       </div>
     </div>
