--- a/src/app/shared/date-inputs/date-inputs.component.html
+++ b/src/app/shared/date-inputs/date-inputs.component.html
@@ -5,14 +5,14 @@
       <div class="calendal">
         <img src="assets/images/calendar.png" alt="alt">
       </div>
-      <p-calendar formControlName="dateFrom" dateFormat="dd.mm.yy" placeholder="25/06/2019"></p-calendar> <!--(onSelect)="getData($event)"-->
+      <p-calendar formControlName="dateFrom" dateFormat="dd/mm/yy" placeholder="25/06/2019"></p-calendar> <!--(onSelect)="getData($event)"-->
     </div>
     <div class="sep">—</div>
     <div class="dateInput">
       <div class="calendal">
         <img src="assets/images/calendar.png" alt="alt">
       </div>
-      <p-calendar formControlName="dateTo" placeholder="25/06/2019"></p-calendar>
+      <p-calendar formControlName="dateTo" dateFormat="dd/mm/yy" placeholder="25/06/2019"></p-calendar>
     </div>
 
   </div>
