favorite videos fix

--- a/src/app/manager/manager2/manager2.component.html
+++ b/src/app/manager/manager2/manager2.component.html
@@ -130,7 +130,7 @@
             <td>Установка визуального контакта</td>
             <td>95%</td>
             <td>
-              <img src="assets/images/greenCurve.png" alt="alt">
+              <p-chart width="147px" type="line" ></p-chart>
             </td>
           </tr>
           <tr>
