main-tabs dynamic data

--- a/src/app/manager/main-tabs/main-tabs.component.html
+++ b/src/app/manager/main-tabs/main-tabs.component.html
@@ -8,7 +8,7 @@
       <div class="text">Не просмотренные видео</div>
     </div>
 
-    <div class="num">{{unviewedVideos}}</div>
+    <div class="num">{{unviewedVideos$ | async}}</div>
 
     <div class="desc">Новых видео</div>
   </div>
