--- a/src/app/manager/manager2/manager2.component.html
+++ b/src/app/manager/manager2/manager2.component.html
@@ -130,7 +130,7 @@
             <td>Установка визуального контакта</td>
             <td>95%</td>
             <td>
-              <p-chart width="147px" type="line" ></p-chart>
+              <p-chart width="147px" height="100px" type="line" ></p-chart>
             </td>
           </tr>
           <tr>
