--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,7 +23,15 @@
           <div class="item">Spanish</div>
         </div>
       </div>
-
+      <!--<div ngbDropdown>
+        <button style="outline: none;" ngbDropdownToggle>English</button>
+        <img src="assets/images/arrowDown.png" alt="alt">
+        <div ngbDropdownMenu >
+          <button ngbDropdownItem>Action - 1</button>
+          <button ngbDropdownItem>Another Action</button>
+          <button ngbDropdownItem>Something else is here</button>
+        </div>
+      </div>-->
       <div class="userWrap" (click)="userCabinetReverse()">
         <div class="avaWrap">
           <img src="assets/images/user.png" alt="alt">
