--- a/src/app/manager/manager2/manager2.component.css
+++ b/src/app/manager/manager2/manager2.component.css
@@ -60,8 +60,8 @@
   border-bottom: 1px solid #e9eaeb; }
 .innerTab .tableWrap table tr:nth-child(odd) {
   background: #f3f7f9; }
-.innerTab .tableWrap table tr td {
-  padding: 20px 0; }
+/*.innerTab .tableWrap table tr td {
+  padding: 20px 0; }*/
 .innerTab .tableWrap table tr td:nth-child(1) {
   width: 8%;
   text-align: center; }
@@ -354,7 +354,7 @@ MULTI INNER
 .multiInner .tableWrap table tr:nth-child(odd) {
   background: #f3f7f9; }
 .multiInner .tableWrap table tr td {
-  padding: 20px 0; }
+  padding-top: 10px; }
 .multiInner .tableWrap table tr td:nth-child(1) {
   width: 68%;
   padding-left: 30px;
