--- a/src/app/manager/manager2/manager2.component.html
+++ b/src/app/manager/manager2/manager2.component.html
@@ -130,42 +130,47 @@
             <td>Установка визуального контакта</td>
             <td>95%</td>
             <td>
-              <p-chart width="147px" height="100px" type="line" ></p-chart>
+              <p-chart width="147px" height="60px" type="line" [data]="data1" [options]="options"></p-chart>
             </td>
           </tr>
           <tr>
             <td>Приветствие клиента</td>
             <td>95%</td>
             <td>
-              <img src="assets/images/greenCurve.png" alt="alt">
+              <!--<img src="assets/images/greenCurve.png" alt="alt">-->
+              <p-chart width="147px" height="60px" type="line" [data]="data1" [options]="options"></p-chart>
             </td>
           </tr>
           <tr>
             <td>Федеральная акция</td>
             <td class="red">43%</td>
             <td>
-              <img src="assets/images/redCurve.png" alt="alt">
+              <!--<img src="assets/images/redCurve.png" alt="alt">-->
+              <p-chart width="147px" height="60px" type="line" [data]="data1" [options]="options"></p-chart>
             </td>
           </tr>
           <tr>
             <td>Озвучить клиенту вид топлива, количество литров</td>
             <td>95%</td>
             <td>
-              <img src="assets/images/greenCurve.png" alt="alt">
+              <!--<img src="assets/images/greenCurve.png" alt="alt">-->
+              <p-chart width="147px" height="60px" type="line" [data]="data1" [options]="options"></p-chart>
             </td>
           </tr>
           <tr>
             <td>Предложить сопутствующий товар (кофе, закуски и т.д.)</td>
             <td class="blue">78%</td>
             <td>
-              <img src="assets/images/blueCurve.png" alt="alt">
+              <!--<img src="assets/images/blueCurve.png" alt="alt">-->
+              <p-chart width="147px" height="60px" type="line" [data]="data1" [options]="options"></p-chart>
             </td>
           </tr>
           <tr>
             <td>Приветствие клиента</td>
             <td>95%</td>
             <td>
-              <img src="assets/images/greenCurve.png" alt="alt">
+              <!--<img src="assets/images/greenCurve.png" alt="alt">-->
+              <p-chart width="147px" height="60px" type="line" [data]="data1" [options]="options"></p-chart>
             </td>
           </tr>
         </table>
