--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -47,7 +47,7 @@
           <div class="alertRed">5</div>
         </div>
 
-          <div class="dropWrap noticeDrop" ngbDropdownMenu>
+          <div style="transform: translate(-348px, 106px)!important;" class="dropWrap noticeDrop" ngbDropdownMenu>
             <div class="mainTitle">
               <div class="text">NOTIFICATIONS</div>
               <div class="total">New 5</div>
