--- a/src/app/manager/manager4/manager4.component.css
+++ b/src/app/manager/manager4/manager4.component.css
@@ -290,13 +290,17 @@ CHECKLIST
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: justify;
+  /*-webkit-box-pack: justify;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
-  justify-content: space-between;
+  justify-content: space-between;*/
+  justify-content: space-around;
   width: 100%;
   padding-bottom: 30px;
   border-bottom: 1px solid #e9eaeb; }
+/*.singlePlate + .singlePlate{
+  margin-left: 25px;
+}*/
 .innerTab4 .topPlate .singlePlate {
   -webkit-border-radius: 4px;
   border-radius: 4px;
